--- a/templates/default/haproxy-app_lb.cfg.erb
+++ b/templates/default/haproxy-app_lb.cfg.erb
@@ -37,7 +37,7 @@ frontend https
 
 backend servers-http
   <% @pool_members.each do |member| -%>
-  server <%= member[:hostname] %> <%= member[:ipaddress] %>:<%= node['haproxy']['member_port'] %> weight 1 maxconn <%= node['haproxy']['member_max_connections'] %> check
+  server <%= member[:hostname] %> <%= member[node[:haproxy][:app_server_attribute]] %>:<%= node['haproxy']['member_port'] %> weight 1 maxconn <%= node['haproxy']['member_max_connections'] %> check
   <% end -%>
   <% if node["haproxy"]["httpchk"] -%>
   option httpchk <%= node["haproxy"]["httpchk"] %>
@@ -48,7 +48,7 @@ backend servers-https
   mode tcp
   option ssl-hello-chk
   <% @pool_members.each do |member| -%>
-  server <%= member[:hostname] %> <%= member[:ipaddress] %>:<%= node['haproxy']['ssl_member_port'] %> weight 1 maxconn <%= node['haproxy']['member_max_connections'] %> check
+  server <%= member[:hostname] %> <%= member[node[:haproxy][:app_server_attribute]] %>:<%= node['haproxy']['ssl_member_port'] %> weight 1 maxconn <%= node['haproxy']['member_max_connections'] %> check
   <% end -%>
   <% if node["haproxy"]["ssl_httpchk"] -%>
   option httpchk <%= node["haproxy"]["ssl_httpchk"] %>
