--- a/templates/default/haproxy-app_lb.cfg.erb
+++ b/templates/default/haproxy-app_lb.cfg.erb
@@ -7,6 +7,7 @@ global
   #quiet
   user <%= node['haproxy']['user'] %>
   group <%= node['haproxy']['group'] %>
+  stats socket /var/run/haproxy.sock mode 0666
 
 defaults
   log     global
